--- a/trunk/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
+++ b/trunk/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
@@ -94,6 +94,9 @@
     <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\SpriteAnimations.js" />
     <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\Units\TeslaTrooper.js" />
     <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\World\Base.js" />
+    <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\World\City.js" />
+    <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\World\Factory.js" />
+    <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\World\HQ.js" />
     <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\_ExampleAnimations.js" />
     <None Include="..\..\MobileClient\www\Assets\Render\TextEffects.css" />
     <None Include="..\..\MobileClient\www\Assets\Render\TileRenderingSystem.css" />
