--- a/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj.filters
+++ b/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj.filters
@@ -524,7 +524,7 @@
     <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\Units\FlakTrooper.js">
       <Filter>Assets\Render\SpriteAnimations\Units</Filter>
     </None>
-    <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\World\ResourcePile.js">
+    <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\World\Minerals.js">
       <Filter>Assets\Render\SpriteAnimations\World</Filter>
     </None>
   </ItemGroup>
