* Added: concept for MapStorage and loading provided maps. * Added: Maps folder and first ever map (for 2 players). Added dev button to load it. * Editor: locking size now works correctly when loading maps.

--- a/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
+++ b/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
@@ -149,6 +149,7 @@
     <None Include="..\..\MobileClient\www\Javascript\FightRendering\Systems\FightUnitsRenderingSystem.js" />
     <None Include="..\..\MobileClient\www\Javascript\FightRendering\Systems\FightUnitStatsController.js" />
     <None Include="..\..\MobileClient\www\Javascript\Main.js" />
+    <None Include="..\..\MobileClient\www\Javascript\MapsStorage.js" />
     <None Include="..\..\MobileClient\www\Javascript\PlayerController.js" />
     <None Include="..\..\MobileClient\www\Javascript\Render\ActionsRender.js" />
     <None Include="..\..\MobileClient\www\Javascript\Render\Animator.js" />
