--- a/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
+++ b/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
@@ -101,6 +101,7 @@
     <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\Units\TeslaTrooper.js" />
     <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\World\Base.js" />
     <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\World\Factory.js" />
+    <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\World\Forest.js" />
     <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\World\HQ.js" />
     <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\World\Minerals.js" />
     <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\_ExampleAnimations.js" />
