--- a/trunk/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
+++ b/trunk/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
@@ -132,6 +132,7 @@
     <None Include="..\..\MobileClient\www\Javascript\DevTools.js" />
     <None Include="..\..\MobileClient\www\Javascript\Editor\Brushes.js" />
     <None Include="..\..\MobileClient\www\Javascript\Editor\EditorEvents.js" />
+    <None Include="..\..\MobileClient\www\Javascript\Editor\EditorState.js" />
     <None Include="..\..\MobileClient\www\Javascript\Editor\Systems\EditorController.js" />
     <None Include="..\..\MobileClient\www\Javascript\Editor\Systems\EditorGamePropertiesController.js" />
     <None Include="..\..\MobileClient\www\Javascript\Editor\Systems\EditorPlayersPropertiesController.js" />
