* Fight: redesigned fight elements to new diagonal layout. * Fight: resized portrait sprites. * Fight: Added "Frame" button to toggle the red frame. * Fight: Fixed wrong frame dimensions based only on asset-scale.

--- a/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
+++ b/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
@@ -147,6 +147,7 @@
     <None Include="..\..\MobileClient\www\Javascript\FightRendering\FightRenderingManager.js" />
     <None Include="..\..\MobileClient\www\Javascript\FightRendering\FightHealthBar.js" />
     <None Include="..\..\MobileClient\www\Javascript\FightRendering\Systems\FightControllerSystem.js" />
+    <None Include="..\..\MobileClient\www\Javascript\FightRendering\Systems\FightLayoutSystem.js" />
     <None Include="..\..\MobileClient\www\Javascript\FightRendering\Systems\FightPortraitsController.js" />
     <None Include="..\..\MobileClient\www\Javascript\FightRendering\Systems\FightTilesRenderingSystem.js" />
     <None Include="..\..\MobileClient\www\Javascript\FightRendering\Systems\FightUnitHealthsController.js" />
