--- a/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj.filters
+++ b/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj.filters
@@ -560,6 +560,9 @@
     <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\Units\Ranger.js">
       <Filter>Assets\Render\SpriteAnimations\Units</Filter>
     </None>
+    <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\Units\Comanche.js">
+      <Filter>Assets\Render\SpriteAnimations\Units</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Assets">
