--- a/trunk/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
+++ b/trunk/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
@@ -100,6 +100,7 @@
     <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\Particles\GroundExplosion.js" />
     <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\SpriteAnimations.js" />
     <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\TerrainSkins.js" />
+    <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\Units\Comanche.js" />
     <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\Units\FlakTrooper.js" />
     <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\Units\Nibbler.js" />
     <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\Units\PeaceKeeper.js" />
