--- a/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
+++ b/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
@@ -106,6 +106,7 @@
     <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\Units\Nibbler.js" />
     <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\Units\PeaceKeeper.js" />
     <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\Units\Ranger.js" />
+    <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\Units\Sting.js" />
     <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\Units\TeslaTrooper.js" />
     <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\World\Base.js" />
     <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\World\Factory.js" />
