--- a/trunk/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj.filters
+++ b/trunk/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj.filters
@@ -569,6 +569,12 @@
     <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\Units\Sting.js">
       <Filter>Assets\Render\SpriteAnimations\Units</Filter>
     </None>
+    <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\Units\IonDrone.js">
+      <Filter>Assets\Render\SpriteAnimations\Units</Filter>
+    </None>
+    <None Include="..\..\MobileClient\www\Assets\Render\SpriteAnimations\Units\DarkAdroit.js">
+      <Filter>Assets\Render\SpriteAnimations\Units</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Assets">
