* Implemented simple MainMenu state. Changed it to be the starting state. Can navigate to TestGame and WorldEditor state. * Refactored back-button input to go back to MainMenu state, if no dialogs are shown. Fixed some dialog buttons. * Moved FrameStats to main.

--- a/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj.filters
+++ b/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj.filters
@@ -578,6 +578,12 @@
     <None Include="..\..\Core\Gameplay\GameLoader.js">
       <Filter>Javascript\Core\Gameplay</Filter>
     </None>
+    <None Include="..\..\MobileClient\www\Javascript\ClientStates\MainMenu.js">
+      <Filter>Javascript\ClientStates</Filter>
+    </None>
+    <None Include="..\..\MobileClient\www\Assets\MainMenu.css">
+      <Filter>Assets</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Assets">
