--- a/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
+++ b/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
@@ -129,7 +129,6 @@
     <None Include="..\..\MobileClient\www\Javascript\3rdParty\sprite.js" />
     <None Include="..\..\MobileClient\www\Javascript\3rdParty\sylvester.src.js" />
     <None Include="..\..\MobileClient\www\Javascript\3rdParty\t.js" />
-    <None Include="..\..\MobileClient\www\Javascript\ActionsMenuController.js" />
     <None Include="..\..\MobileClient\www\Javascript\AIController.js" />
     <None Include="..\..\MobileClient\www\Javascript\AIControllerUI.js" />
     <None Include="..\..\MobileClient\www\Javascript\AssetsStaticScaler.js" />
@@ -185,7 +184,6 @@
     <None Include="..\..\MobileClient\www\Javascript\Render\RenderEvents.js" />
     <None Include="..\..\MobileClient\www\Javascript\Render\RenderUtils.js" />
     <None Include="..\..\MobileClient\www\Javascript\Render\SceneRenderer.js" />
-    <None Include="..\..\MobileClient\www\Javascript\Render\StoreRender.js" />
     <None Include="..\..\MobileClient\www\Javascript\Render\Systems\ActionFogRenderingSystem.js" />
     <None Include="..\..\MobileClient\www\Javascript\Render\Systems\ActionsRenderingSystem.js" />
     <None Include="..\..\MobileClient\www\Javascript\Render\Systems\AnimationSystemScrollOptimizer.js" />
@@ -202,6 +200,8 @@
     <None Include="..\..\MobileClient\www\Javascript\Render\Systems\VisibilityFogRenderingSystem.js" />
     <None Include="..\..\MobileClient\www\Javascript\Render\TileGlobals.js" />
     <None Include="..\..\MobileClient\www\Javascript\Render\WorldLayers.js" />
+    <None Include="..\..\MobileClient\www\Javascript\UI\Game\ActionsMenuController.js" />
+    <None Include="..\..\MobileClient\www\Javascript\UI\Game\StoreScreen.js" />
     <None Include="..\..\MobileClient\www\Javascript\UnitFactoryClient.js" />
     <None Include="..\..\MobileClient\www\Javascript\Utils\BrowserBackwardCompatibility.js" />
     <None Include="..\..\MobileClient\www\Javascript\Utils\ClientUtils.js" />
