* Added Map Selector actual preview using optimized lightweight world. Can pan/zoom. * Optimized: world destroying performance. Some mock up checks as well. * Fixed: invalidation happening too early on destroying entities, causing component destructors not get called. * Fixed: errors when destroying world and no players are playing.

--- a/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj.filters
+++ b/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj.filters
@@ -593,6 +593,9 @@
     <None Include="..\..\MobileClient\www\Javascript\UI\MenuScreen\SkirmishScreen.js">
       <Filter>Javascript\UI\MenuScreen</Filter>
     </None>
+    <None Include="..\..\MobileClient\www\Javascript\UI\MenuScreen\MapPreviewMaker.js">
+      <Filter>Javascript\UI\MenuScreen</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Assets">
