* Created Game Toolbar, where in-game menu buttons will be. Quit and Next turn work for now. * Fixed: not starting the game in Test mode.

--- a/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
+++ b/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
@@ -191,6 +191,7 @@
     <None Include="..\..\MobileClient\www\Javascript\Render\Systems\ControllerRenderingSystem.js" />
     <None Include="..\..\MobileClient\www\Javascript\Render\Systems\DebugTilesRenderingSystem.js" />
     <None Include="..\..\MobileClient\www\Javascript\Render\Systems\FloatingTextsSystem.js" />
+    <None Include="..\..\MobileClient\www\Javascript\Render\Systems\GameToolbarSystem.js" />
     <None Include="..\..\MobileClient\www\Javascript\Render\Systems\LayersUpdateSystem.js" />
     <None Include="..\..\MobileClient\www\Javascript\Render\Systems\AnimationSystem.js" />
     <None Include="..\..\MobileClient\www\Javascript\Render\Systems\IdleAnimationsSystem.js" />
