* Added VictoryStateMonitor to check win & defeat conditions. Player is defeated when has no production or enough income and has no units. * UI: just gray out defeated players for now in game state info. If victorious, map is fully revealed.

--- a/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj.filters
+++ b/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj.filters
@@ -599,6 +599,9 @@
     <None Include="..\..\MobileClient\www\Javascript\Render\Systems\GameToolbarSystem.js">
       <Filter>Javascript\Render\Systems</Filter>
     </None>
+    <None Include="..\..\Core\Gameplay\Systems\VictoryStateMonitor.js">
+      <Filter>Javascript\Core\Gameplay\Systems</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Assets">
