--- a/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
+++ b/MobileClientVS/MobileClientVS/MobileClientVS.vcxproj
@@ -73,6 +73,7 @@
     <None Include="..\..\Core\Gameplay\Systems\TileVisibilitySystem.js" />
     <None Include="..\..\Core\Gameplay\Systems\UnitsSystem.js" />
     <None Include="..\..\Core\Gameplay\Systems\ResourcesSystem.js" />
+    <None Include="..\..\Core\Gameplay\Systems\VictoryStateMonitor.js" />
     <None Include="..\..\Core\Gameplay\TerrainType.js" />
     <None Include="..\..\Internal Tools\BattleTestground\BattleTestground-Main.js" />
     <None Include="..\..\Internal Tools\BattleTestground\BattleTestground.html" />
